# Crystal_Sound_Lab

./: .gitignore  .gitmodules  CMakeLists.txt  Crystal Sound Lab.slnx  Crystal Sound Lab.vcxproj  Crystal Sound Lab.vcxproj.filters
docs/: learn.md  miniaudio_get_device_name.md
includes/glad/: glad.h
includes_impl/: glad.c
src/: Source.cpp  waveform_fs.glsl  waveform_vs.glsl
src/applications/: GraphicManager.ixx  ModuleManager.ixx
src/core/: AudioNode.ixx  Buffer.ixx  Contexts.ixx  CoreUtils.ixx  Event.ixx  Foundation.ixx  Shader.ixx
src/core/dsp/: DSP.ixx
src/core/math/: Complex.ixx
src/core/nodes/: AudioNode.ixx  AudioNodes.ixx  Base.ixx  Bus.ixx  Source.ixx
src/modules/: Oscillator.ixx  Oscilloscope.ixx
src/services/: AudioDriver.ixx  FileControl.ixx  UIEditor.ixx
